--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         </header>
         <main>
             <h1>Home</h1>
+            <h2>Me muero por besarte Gisela</h2>
+            <p>Y te pongo una foto de un perro bobo para que sonrías
+            <br><img src="images/perrobobo.jpg" width="400" height="400"></p>
+            <p style="font-size: 0.3em;"> (de verdad que me muero por besarte)</p>
             <p>Test stuff (now there is nothing)</p>
         </main>
     </body>
