--- a/movies.html
+++ b/movies.html
@@ -5,23 +5,22 @@
         <title>Jesus Copado | Web Design</title>
         <link rel="icon" href="images/logosinfondo.ico">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Bree+Serif|Lobster" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <div id="nav">
-                <div class="nav2">
-                    <a class="navLink" href="index.html"><img src="images/logosinfondo.png" width="100" height="100"></a>
-                </div>
-                <div class="nav2">
-                    <a class="navLink" href="movies.html">Movies</a>
-                </div>
-                <div class="nav2">
-                    <a class="navLink" href="things.html">Random</a>
-                </div>
-            </div>
+        <header id="main-header">
+            <a id="logo-header" href="index.html"><span>Jesús Copado</span></a>
+            <nav class="navBar">
+                <ul class="navList">
+                    <li class="navItem"><a href="things.html">Lifestyle</a></li>
+                    <li class="navItem"><a href="movies.html">Movies</a></li>
+                    <li class="navItem"><a href="#">Photos</a></li>
+                    <li class="navItem"><a href="#">About</a></li>
+                    <li class="navItem"><a href="#">Contact</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
-            <h1>Movies</h1>
             <article>
                 <h2>Not famous movies you have to watch</h2>
                 <h3 class="movie-name">Captain Fantastic</h3>
@@ -51,5 +50,8 @@
                 <p class="movie-sinopsis">In the not so distant future, Theodore (Joaquin Phoenix), a lonely writer purchases a newly developed operating system designed to meet the user’s every needs. To Theodore’s surprise, a romantic relationship develops between him and his operating system, named Samantha (Scarlett Johansson's voice). This unconventional love story blends science fiction and romance in a sweet tale that explores the nature of love and the ways that technology isolates and connects us all.</p>
             </article>
         </main>
+        <footer id="main-footer">
+            <p>&copy; 2016 <a href="index.html">Jesús Copado</a></p>
+        </footer>
     </body>
 </html>
