--- a/index.html
+++ b/index.html
@@ -5,28 +5,39 @@
         <title>Jesus Copado | Web Design</title>
         <link rel="icon" href="images/logosinfondo.ico">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Bree+Serif|Lobster" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <div id="nav">
-                <div class="nav2">
-                    <a class="navLink" href="index.html"><img src="images/logosinfondo.png" width="100" height="100"></a>
-                </div>
-                <div class="nav2">
-                    <a class="navLink" href="movies.html"><strong></strong>Movies</a>
-                </div>
-                <div class="nav2">
-                    <a class="navLink" href="things.html">Random</a>
-                </div>
-            </div>
+        <header id="main-header">
+            <a id="logo-header" href="index.html"><span>Jesús Copado</span></a>
+            <nav class="navBar">
+                <ul class="navList">
+                    <li class="navItem"><a href="things.html">Lifestyle</a></li>
+                    <li class="navItem"><a href="movies.html">Movies</a></li>
+                    <li class="navItem"><a href="#">Photos</a></li>
+                    <li class="navItem"><a href="#">About</a></li>
+                    <li class="navItem"><a href="#">Contact</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
-            <h1>Home</h1>
-            <h2>Me muero por besarte Gisela</h2>
-            <p>Y te pongo una foto de un perro bobo para que sonrías
-            <br><img src="images/perrobobo.jpg" width="400" height="400"></p>
-            <p style="font-size: 0.3em;"> (de verdad que me muero por besarte)</p>
-            <p>Test stuff (now there is nothing)</p>
+            <article>
+                <h1>This is a header</h1>
+
+                <img src="images/gif2.gif">
+
+                <div class="content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                </div>
+            </article>
         </main>
+        <footer id="main-footer">
+            <p>&copy; 2016 <a href="index.html">Jesús Copado</a></p>
+        </footer>
     </body>
 </html>
