--- a/things.html
+++ b/things.html
@@ -5,25 +5,28 @@
         <title>Jesus Copado | Web Design</title>
         <link rel="icon" href="images/logosinfondo.ico">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Bree+Serif|Lobster" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <div id="nav">
-                <div class="nav2">
-                    <a class="navLink" href="index.html"><img src="images/logosinfondo.png" width="100" height="100"></a>
-                </div>
-                <div class="nav2">
-                    <a class="navLink" href="movies.html">Movies</a>
-                </div>
-                <div class="nav2">
-                    <a class="navLink" href="things.html">Random</a>
-                </div>
-            </div>
+        <header id="main-header">
+            <a id="logo-header" href="index.html"><span>Jesús Copado</span></a>
+            <nav class="navBar">
+                <ul class="navList">
+                    <li class="navItem"><a href="things.html">Lifestyle</a></li>
+                    <li class="navItem"><a href="movies.html">Movies</a></li>
+                    <li class="navItem"><a href="#">Photos</a></li>
+                    <li class="navItem"><a href="#">About</a></li>
+                    <li class="navItem"><a href="#">Contact</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
             <h1>Random</h1>
             <p>Random stuff</p>
             <img src="images/giphy.gif">
         </main>
+        <footer id="main-footer">
+            <p>&copy; 2016 <a href="index.html">Jesús Copado</a></p>
+        </footer>
     </body>
 </html>
