minor style changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Jesus Copado | Web Design</title>
         <link rel="icon" href="images/logosinfondo.ico">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Bree+Serif|Lobster" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Bree+Serif|Lobster|Open+Sans|Roboto" rel="stylesheet">
     </head>
     <body>
         <header id="main-header">
