--- a/movies.html
+++ b/movies.html
@@ -13,7 +13,7 @@
             <nav class="navBar">
                 <ul class="navList">
                     <li class="navItem"><a href="things.html">Lifestyle</a></li>
-                    <li class="navItem"><a href="movies.html">Movies</a></li>
+                    <li class="navItem"><a id="navbar-item-selected" href="movies.html">Movies</a></li>
                     <li class="navItem"><a href="#">Photos</a></li>
                     <li class="navItem"><a href="#">About</a></li>
                     <li class="navItem"><a href="#">Contact</a></li>
