--- a/things.html
+++ b/things.html
@@ -12,7 +12,7 @@
             <a id="logo-header" href="index.html"><span>Jesús Copado</span></a>
             <nav class="navBar">
                 <ul class="navList">
-                    <li class="navItem"><a href="things.html">Lifestyle</a></li>
+                    <li class="navItem"><a id="navbar-item-selected" href="things.html">Lifestyle</a></li>
                     <li class="navItem"><a href="movies.html">Movies</a></li>
                     <li class="navItem"><a href="#">Photos</a></li>
                     <li class="navItem"><a href="#">About</a></li>
