more minor style changes

--- a/things.html
+++ b/things.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Jesus Copado | Web Design</title>
-        <link rel="icon" href="images/logosinfondo.ico">
+        <title>Jesús Copado</title>
+        <link rel="icon" href="images/greenLobsterJC.png">
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Bree+Serif|Lobster" rel="stylesheet">
     </head>
@@ -21,9 +21,17 @@
             </nav>
         </header>
         <main>
-            <h1>Random</h1>
-            <p>Random stuff</p>
-            <img src="images/giphy.gif">
+            <section id="main-content">
+                <h1>Random</h1>
+                <p>Random stuff</p>
+                <img src="images/giphy.gif">
+                <br>
+                <img src="images/gif2.gif">
+                <br>
+                <br>
+                <div id="prueba">
+                JC</div>
+            </section>
         </main>
         <footer id="main-footer">
             <p>&copy; 2016 <a href="index.html">Jesús Copado</a></p>
