--- a/movies.html
+++ b/movies.html
@@ -9,7 +9,9 @@
     </head>
     <body>
         <header id="main-header">
-            <a id="logo-header" href="index.html"><span>Jesús Copado</span></a>
+            <div id="logo-header">
+                 <a id="logo-header-link" href="index.html">Jesús Copado</a>
+            </div>
             <nav class="navBar">
                 <ul class="navList">
                     <li class="navItem"><a href="things.html">Lifestyle</a></li>
