first responsive design

--- a/movies.html
+++ b/movies.html
@@ -2,10 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jesús Copado</title>
-        <link rel="icon" href="images/greenLobsterJC.png">
+        <link rel="icon" href="images/greenLobsterJC.ico">
+        <link rel="stylesheet" type="text/css" href="reset.css">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Bree+Serif|Lobster" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Bree+Serif|Lobster|Open+Sans|Roboto" rel="stylesheet">
     </head>
     <body>
         <header id="main-header">
@@ -13,6 +15,9 @@
                  <a id="logo-header-link" href="index.html">Jesús Copado</a>
             </div>
             <nav class="navBar">
+                
+                <div id="hamburger-menu"><a id="hamburger-menu-link" href="navbar-menu.html">☰</a></div>
+                
                 <ul class="navList">
                     <li class="navItem"><a href="things.html">Lifestyle</a></li>
                     <li class="navItem"><a id="navbar-item-selected" href="movies.html">Movies</a></li>
