--- a/navbar-menu.html
+++ b/navbar-menu.html
@@ -19,26 +19,23 @@
                 <div id="hamburger-menu"><a id="hamburger-menu-link" href="navbar-menu.html">☰</a></div>
                 
                 <ul class="navList">
-                    <li class="navItem"><a id="navbar-item-selected" href="things.html">Lifestyle</a></li>
+                    <li class="navItem"><a href="things.html">Lifestyle</a></li>
                     <li class="navItem"><a href="movies.html">Movies</a></li>
                     <li class="navItem"><a href="#">Photos</a></li>
                     <li class="navItem"><a href="#">About</a></li>
                     <li class="navItem"><a href="#">Contact</a></li>
                 </ul>
+                
             </nav>
         </header>
         <main>
-            <section id="main-content">
-                <h1>Random</h1>
-                <p>Random stuff</p>
-                <img src="images/giphy.gif">
-                <br>
-                <img src="images/gif2.gif">
-                <br>
-                <br>
-                <div id="logo-test">
-                JC</div>
-            </section>
+            <ul id="menuList">
+                <li class="menuItem"><a href="things.html">Lifestyle</a></li>
+                <li class="menuItem"><a href="movies.html">Movies</a></li>
+                <li class="menuItem"><a href="#">Photos</a></li>
+                <li class="menuItem"><a href="#">About</a></li>
+                <li class="menuItem"><a href="#">Contact</a></li>
+            </ul>
         </main>
         <footer id="main-footer">
             <p>&copy; 2016 <a href="index.html">Jesús Copado</a></p>
