--- a/movies.html
+++ b/movies.html
@@ -33,7 +33,7 @@
                 <article>
                     <h1>Not famous movies you have to watch</h1>
                     <h3 class="movie-name">Captain Fantastic</h3>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/D1kH4OMIOMc?rel=0" frameborder="0" allowfullscreen></iframe>
+                    <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/D1kH4OMIOMc?rel=0" frameborder="0" allowfullscreen></iframe></div>
                     <p class="movie-sinopsis">In the forests of the Pacific Northwest, a father devoted to raising his six kids with a rigorous physical and intellectual education is forced to leave his paradise and enter the world, challenging his idea of what it means to be a parent.</p>
                     <h3 class="movie-name">Mr Nobody</h3>
                     <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/mpi0qsp3v_w?rel=0" frameborder="0" allowfullscreen></iframe></div>
