fonts and margins almost perfect

--- a/movies.html
+++ b/movies.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="images/greenLobsterJC.ico">
         <link rel="stylesheet" type="text/css" href="reset.css">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Bree+Serif|Lobster|Open+Sans|Roboto" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Bree+Serif|Lobster|Open+Sans|Roboto|Merriweather|Oswald|Playfair+Display|Slabo+27px|Arimo|Roboto+Slab|Bitter" rel="stylesheet">
     </head>
     <body>
         <header id="main-header">
@@ -31,30 +31,30 @@
             <section id="main-content">
 
                 <article>
-                    <h1>Not famous movies you have to watch</h1>
-                    <h3 class="movie-name">Captain Fantastic</h3>
+                    <h2>Not famous movies you have to watch</h2>
+                    <h4 class="movie-name">Captain Fantastic</h4>
                     <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/D1kH4OMIOMc?rel=0" frameborder="0" allowfullscreen></iframe></div>
                     <p class="movie-sinopsis">In the forests of the Pacific Northwest, a father devoted to raising his six kids with a rigorous physical and intellectual education is forced to leave his paradise and enter the world, challenging his idea of what it means to be a parent.</p>
-                    <h3 class="movie-name">Mr Nobody</h3>
+                    <h4 class="movie-name">Mr Nobody</h4>
                     <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/mpi0qsp3v_w?rel=0" frameborder="0" allowfullscreen></iframe></div>
                     <p class="movie-sinopsis">A young boy stands on a station platform. The train is about to leave. Should he go with his mother or stay with his father? An infinity of possibilities rise from this decision. As long as he doesn’t choose, anything is possible. Every life deserves to be lived.</p>
-                    <h3 class="movie-name">The Man from Earth</h3>
+                    <h4 class="movie-name">The Man from Earth</h4>
                     <em>This is not the trailer, it's the actual movie</em>
                     <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/zzIynnZTia0?rel=0" frameborder="0" allowfullscreen></iframe></div>
                     <p class="movie-sinopsis">An impromptu goodbye party for Professor John Oldman becomes a mysterious interrogation after the retiring scholar reveals to his colleagues he is an immortal who has walked the earth for 14,000 years. Acclaimed Sci-Fi writer Jerome Bixby conceived this story back in the early 1960's. It would come to be his last great work, finally completing it on his deathbed in April of 1998.</p>
-                    <h3 class="movie-name">I Origins</h3>
+                    <h4 class="movie-name">I Origins</h4>
                     <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/zPuoWzLjhFo?rel=0" frameborder="0" allowfullscreen></iframe></div>
                     <p class="movie-sinopsis">Dr. Ian Gray (Michael Pitt), a molecular biologist studying the evolution of the eye, finds his work permeating his life after a brief encounter with an exotic young woman (Astrid Bergès-Frisbey) who slips away from him. As his research continues years later with his lab partner Karen (Brit Marling), they make a stunning scientific discovery that has far reaching implications and complicates both his scientific and spiritual beliefs. Traveling half way around the world, he risks everything he has ever known to validate his theory.</p>
-                    <h3 class="movie-name">The Lobster</h3>
+                    <h4 class="movie-name">The Lobster</h4>
                     <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/z069ldsumxA?rel=0" frameborder="0" allowfullscreen></iframe></div>
                     <p class="movie-sinopsis">An unconventional love story set in a dystopian near future where single people, according to the rules of the Town, are arrested and transferred to the Hotel. There they are obliged to find a matching mate in 45 days. If they fail, they are transformed into an animal of their choosing and released in the woods. A desperate man escapes from the Hotel to the woods where the Loners live and there he falls in love although it’s against the rules.</p>
-                    <h3 class="movie-name">Eternal Sunshine of the Spotless Mind</h3>
+                    <h4 class="movie-name">Eternal Sunshine of the Spotless Mind</h4>
                     <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/GBEke6JixyE?rel=0" frameborder="0" allowfullscreen></iframe></div>
                     <p class="movie-sinopsis">Joel (Jim Carrey) is stunned to discover that his girlfriend Clementine (Kate Winslet) has had her memories of their tumultuous relationship erased. Out of desperation, he contacts the inventor of the process, Dr. Howard Mierzwiak (Tom Wilkinson), to have Clementine removed from his own memory. But as Joel's memories progressively disappear, he begins to rediscover his love for Clementine. From deep within the recesses of his brain, Joel attempts to escape the procedure. As Dr. Mierzwiak and his crew (Kirsten Dunst, Mark Ruffalo, Elijah Wood) chase him through the maze of his memories, it's clear that Joel just can't get Clementine out of his head.</p>
-                    <h3 class="movie-name">Requiem for a Dream</h3>
+                    <h4 class="movie-name">Requiem for a Dream</h4>
                     <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/lgo3Hb5vWLE?rel=0" frameborder="0" allowfullscreen></iframe></div>
                     <p class="movie-sinopsis">Harry Goldfarb (Jared Leto) and Marion Silver (Jennifer Connelly) are lovers in Brooklyn with dreams of setting up a small business and spending the rest of their lives in love--their version of the American dream. The two are also desperate heroin addicts, a compulsion that darkens their lives and leads Harry to repeatedly pawn his mothers television. His mother, Sara Goldfarb (Ellen Burstyn), is addicted to television, which is why she keeps replacing the stolen set. One day she receives a call from her favorite show, the surreal TAPPY TIBBONS SHOW, and learns that she has been selected to appear on an upcoming broadcast. When she cant fit into her best red dress, her doctor prescribes diet pills (uppers), to which she swiftly and painfully becomes addicted. Harrys cohort, an intelligent hustler named Tyrone (Marlon Wayans), completes the foursome.</p>
-                    <h3 class="movie-name">Her</h3>
+                    <h4 class="movie-name">Her</h4>
                     <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/6QRvTv_tpw0?rel=0" frameborder="0" allowfullscreen></iframe></div>
                     <p class="movie-sinopsis">In the not so distant future, Theodore (Joaquin Phoenix), a lonely writer purchases a newly developed operating system designed to meet the user’s every needs. To Theodore’s surprise, a romantic relationship develops between him and his operating system, named Samantha (Scarlett Johansson's voice). This unconventional love story blends science fiction and romance in a sweet tale that explores the nature of love and the ways that technology isolates and connects us all.</p>
                 </article>
