--- a/things.html
+++ b/things.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="images/greenLobsterJC.ico">
         <link rel="stylesheet" type="text/css" href="reset.css">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Bree+Serif|Lobster|Open+Sans|Roboto" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Bree+Serif|Lobster|Open+Sans|Roboto|Merriweather|Oswald|Playfair+Display|Slabo+27px|Arimo|Roboto+Slab|Bitter" rel="stylesheet">
     </head>
     <body>
         <header id="main-header">
