minor changes in style
thats it

--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,3 @@
 ## Contact
 
-Drop me an email if you are interested in me coding for you or if you are a beautiful girl
+Drop me an email if you are a company wiling to hire a dedicate software engineer or have any suggestions about my webpage
