--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ to cancel the serving (Ctr + C) and serve the website again.</p>
 
       <h2 id="contact">Contact</h2>
 
-<p>Drop me an email if you are interested in me coding for you or if you are a beautiful girl</p>
+<p>Drop me an email if you are a company wiling to hire a dedicate software engineer or have any suggestions about my webpage</p>
 
 
       
@@ -476,15 +476,16 @@ to cancel the serving (Ctr + C) and serve the website again.</p>
 <!-- Social Buttons End -->
 
 
-    <p><br><br></p>
+    <p><br></p>
 
     <div class="container text-center">
         <p>Copyright &copy; Jesús Copado 2017</p>
+        <p><small>Powered by <a href="http://jekyllrb.com">Jekyll</small></a></p>
         
     </div>
 </footer>
 
-<p><br><br><br><br><br><br></p>
+<p><br><br><br></p>
 
 <!-- Footer End -->
 
@@ -539,8 +540,6 @@ $(window).scroll(toggleNavCollapse);$(function(){$("a.page-scroll").bind("click"
   var myQuotes =  new Array();
   
     myQuotes.push("<em>The things you own end up owning you.</em> - Tyler Durden");
-  
-    myQuotes.push("<em>Every path is the right path. Everything could've been anything else. And it would have just as much meaning.</em> - Nemo Nobody");
   
     myQuotes.push("<em>Hamburgers: the cornerstone of any nutritious breakfast.</em> - Jules Winnfield");
   
