design almost finished
thats it

--- a/about.html
+++ b/about.html
@@ -1,7 +1,5 @@
 ## About
 
-I'm a Software Engineering student from Lanzarote. Github's Octocat was designed by Simon Oxley, alongside the white bird Twitter used (before they received a proper logo) as part of a usual routine of cranking out images for iStock. GitHub saw it, and wanted it, presumably under the notion that it can represent how complex code combines to create peculiar things, much like the octopuss... except the CEO of GitHub called it an octocat, and it has been the octocat since <a href="https://www.quora.com/GitHub/What-is-the-story-behind-GitHub%E2%80%99s-octocat-mascot" target="_blank">[via]</a>.
+I'm a Software Engineering student from Lanzarote. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae accumsan arcu, nec malesuada est. Proin ut rutrum lacus. Nunc porta, ligula ac congue tincidunt, nulla lectus fringilla neque, eget consequat velit libero a libero. Aenean euismod dui id massa imperdiet, a placerat velit porta. Donec vitae tellus at ex bibendum congue ultrices maximus metus. Curabitur bibendum ullamcorper ipsum, non lobortis est sagittis at. Etiam sit amet quam ex.
 
-<small>
-Octocat is Github's logo and trademark and here is used to illustrate a fictional character (John Smith) that used the *{ Personal }* Jekyll Theme to build his website.
-</small>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae accumsan arcu, nec malesuada est. Proin ut rutrum lacus. Nunc porta, ligula ac congue tincidunt, nulla lectus fringilla neque, eget consequat velit libero a libero.
