--- a/index.html
+++ b/index.html
@@ -611,11 +611,9 @@ $(window).scroll(toggleNavCollapse);$(function(){$("a.page-scroll").bind("click"
   
     myQuotes.push("<em>The things you own end up owning you.</em> - Tyler Durden");
   
-    myQuotes.push("<em>Hamburgers: the cornerstone of any nutritious breakfast.</em> - Jules Winnfield");
+    myQuotes.push("<em>Play melancholy song.</em> - Theodore Twombly");
   
-    myQuotes.push("<em>Play melancholy song.</em> - Theodore Twombly</em>");
-  
-    myQuotes.push("<em>Jesús Copado is the sexiest guy that ever existed</em> - Mia Dolan");
+    myQuotes.push("<em>Let me tell you what 'Like a Virgin' is about.</em> - Mr. Brown");
   
 
   function shuffle(array) {
