Added some content and finish the design
yeah thats it

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 ## About
 
-I'm a Software Engineering student from Lanzarote. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae accumsan arcu, nec malesuada est. Proin ut rutrum lacus. Nunc porta, ligula ac congue tincidunt, nulla lectus fringilla neque, eget consequat velit libero a libero. Aenean euismod dui id massa imperdiet, a placerat velit porta. Donec vitae tellus at ex bibendum congue ultrices maximus metus. Curabitur bibendum ullamcorper ipsum, non lobortis est sagittis at. Etiam sit amet quam ex.
+I'm Jesús Copado, a 22-year-old student from Lanzarote. I study Software Engineering in the Complutense University of Madrid and this year I am studying the Philipps University of Marburg, as an Erasmus student. And thanks to this I'm starting this personal blog and website.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae accumsan arcu, nec malesuada est. Proin ut rutrum lacus. Nunc porta, ligula ac congue tincidunt, nulla lectus fringilla neque, eget consequat velit libero a libero.
+In my blog I talk about my stuff, the things I enjoy and the things I'm interested in. So you will find a lot of posts about movies, productivity, self-improvement, technology... Just scroll down a little bit more and you will find my last post and a link to all of them. I hope you find some valuable stuff there. Disclaimer: as I'm from Spain some of the posts are written in spanish.
