--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Blog and website of Jesús Copado (ampliar).">
+  <meta name="description" content="Blog and website of Jesús Copado">
   <meta name="author" content="Jesús Copado">
   <meta name="keywords" content="copado, jesus, personal, jekyll">
   <link rel="canonical" href="/404.html">
@@ -262,18 +262,6 @@ function addTohistory() {
 </script>
 
 <!-- Gesture Navigation / Swipe Instruction Start -->
-
-
-  
-
-  
-
-  
-
-  
-
-<!-- Gesture Navigation / Swipe Instruction End -->
-
 
 
 <!-- Javascript End -->
