--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,3 @@
 ## Contact
 
-Drop me an email if you are a company wiling to hire a dedicate software engineer or have any suggestions about my webpage
+Drop me an email if you are a company wiling to hire a dedicate software engineer (<a href="files/CVJesusCopado.pdf" download>check out my CV</a>) or if you have any suggestions about my webpage
